appId: ${APP_ID}
name: "Negative - Empty Credentials"

---
- clearState
- launchApp:
    appId: ${APP_ID}

- extendedWaitUntil:
    visible: "Get started"
    timeout: 20000

- tapOn: "Workspace name"
- inputText: ${WORKSPACE}
- tapOn: "CONTINUE"

- extendedWaitUntil:
    visible: "Welcome"
    timeout: 20000

# Do not input email/password
- tapOn: "Continue"

# Validate errors
- assertVisible: "Please enter an email address"
- assertVisible: "Password is required"