appId: ${APP_ID}
name: "Negative - Wrong Password"

---
- clearState
- launchApp:
    appId: ${APP_ID}

- extendedWaitUntil:
    visible: "Get started"
    timeout: 20000

- tapOn: "Workspace name"
- inputText: ${WORKSPACE}
- tapOn: "CONTINUE"

- extendedWaitUntil:
    visible: "Welcome"
    timeout: 20000

- tapOn: "Email address "
- inputText: ${USERNAME}

- tapOn: "Password "
- inputText: "WrongPassword123"

- hideKeyboard
- tapOn: "Continue"

# Validate login failure
- extendedWaitUntil:
    visible: "Invalid credentials"
    timeout: 10000

- assertVisible: "Invalid credentials"